<resources>
    <string name="app_name">MyIntentApp</string>
    <string name="move_activity">Pindah Activity</string>
    <string name="move_with_data">Pindah Activity dengan Data</string>
    <string name="move_with_object">Pindah Activity dengan Object</string>
    <string name="dial_number">Dial a Number</string>
    <string name="move_with_result">Pindah Activity untuk Result</string>
    <string name="result_from_activity">Hasil dari Activity</string>
    <string name="choose_number">Pilih angka yang kamu suka</string>
    <string name="_50">50</string>
    <string name="_100">100</string>
    <string name="_150">150</string>
    <string name="_200">200</string>
    <string name="choose">Pilih</string>
    <string name="data_received">Data Diterima</string>
    <string name="object_received">Object Diterima</string>
    <string name="this_is_moveactivity">Ini MoveActivity</string>
    <string name="_Soto_Ayam">Soto Ayam</string>
    <string name="_Denny_Caknan">Denny Caknan</string>
    <string name="_Aida_Mantan">Aida Mantan</string>
    <string name="_Enthik_Mantan">Enthik Mantan</string>
    <string name="_Matul_Mantan">Matul Mantan</string>
    <string name="_Aghisna_Mantan">Aghisna Mantan</string>
    <string name="Pilih_Mantan_Terindahmu">Pilih Mantan Terindahmu</string>
    <string name="_Aida">Aida</string>
    <string name="_Enthik">Enthik</string>
    <string name="_Matul">Matul</string>
    <string name="_Aghisna">Aghisna</string>
</resources>